--- a/src/components/carousel/carousel-item/CarouselItem.scss
+++ b/src/components/carousel/carousel-item/CarouselItem.scss
@@ -69,10 +69,6 @@
 
 							&.date {
 								margin-left: 0;
-							}
-
-							&.spot {
-								width: 117px;
 								border-radius: 100px;
 								background-color: rgba(255, 255, 255, 0.2);
 								font-size: 14px;
@@ -80,7 +76,7 @@
 								line-height: 19px;
 								color: #fff;
 								text-align: center;
-								padding: 7px 0;
+								padding: 5px 15px 7px;
 								margin-top: 12px;
 							}
 
