--- a/src/components/grid-card/GridCard.scss
+++ b/src/components/grid-card/GridCard.scss
@@ -8,10 +8,10 @@
 
 				&:hover {
 					img {
-						transform: scale(1.3);
+						transform: scale(1.03);
+						opacity: 0.7;
 					}
 				}
-
 			}
 		}
 
